--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -4,6 +4,9 @@
 @import "./components/stat-pool.css";
 @import "./components/header.css";
 @import "./components/basic-info.css";
+@import "./components/cypher-item.css";
+@import "./components/artifact-item.css";
+@import "./components/oddity-item.css";
 
 /* Utility styles */
 @import "./utilities/animations.css";
