--- a/src/styles/components/text-field.css
+++ b/src/styles/components/text-field.css
@@ -9,8 +9,8 @@
 }
 
 .text-content {
-  font-family: Georgia, "Times New Roman", serif;
-  font-size: 0.95rem;
+  font-family: "Caveat", "Patrick Hand", cursive;
+  font-size: 1.125rem;
   line-height: 1.7;
   color: #78350f;
   white-space: pre-wrap;
