--- a/src/styles/components/equipment-item.css
+++ b/src/styles/components/equipment-item.css
@@ -15,14 +15,17 @@
 }
 
 .equipment-name {
+  font-family: "Caveat", "Patrick Hand", cursive;
   font-weight: 600;
-  font-size: 1.125rem;
+  font-size: 1.375rem;
   color: #166534;
   margin-bottom: 0.5rem;
+  line-height: 1.4;
 }
 
 .equipment-description {
-  font-size: 0.875rem;
+  font-family: "Caveat", "Patrick Hand", cursive;
+  font-size: 1.125rem;
   color: #15803d;
   line-height: 1.5;
 }
