--- a/src/styles/components/basic-info.css
+++ b/src/styles/components/basic-info.css
@@ -81,7 +81,7 @@
   appearance: none;
   -webkit-appearance: none;
   -moz-appearance: none;
-  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%238b1313' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+  background-image: none;
   background-repeat: no-repeat;
   background-position: right center;
   background-size: 20px;
@@ -91,6 +91,7 @@
 .char-type-select:hover {
   background-color: rgba(139, 19, 19, 0.05);
   border-bottom-color: rgba(139, 19, 19, 0.3);
+  background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%238b1313' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
 }
 
 .char-type-select:focus {
